# smhasher

./: .gitignore  CMakeLists.txt  Hashes.cpp  Hashes.h  LICENSE  Platform.h  README.md  crc.cpp  crc32_hw.c  crc32_hw1.c  falkhash.c  fletcher.c  main.cpp  memhash_32.bat  memhash_64.bat  sanmayce.cpp  xxhash256.c
gas/i686/: memhash.s
gas/x86_64/: memhash.s
msvc/i686/: memhash.asm
msvc/x86_64/: memhash.asm
